--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
 				
 				<div class="contacts"><i class="icon_phone"></i><h3>Phone:</h3><p>+91 9594298649 / +91 9152829284</p></div>
                 <div class="contacts"><i class="icon_mail"></i><h3>E-mail:</h3><p>nileshyparab@gmail.com</p></div>
-                <div class="contacts"><i class="icon_location"></i><h3>Location:</h3><p>A-18, 4th Floor, Shiv Ganga Bldg,<br> Mahatma Phule Road, Vishnu Nagar,<br> Near Maratha Mandir hall, <br>Dombivali (West) - 421 404</p></div>
+                <div class="contacts"><i class="icon_location"></i><h3>Location:</h3><p>D-29, 2nd floor, Gangeshwar Nagar,<br> Pandit din dayal road, Near Samrat Hotel,<br> Dombivali (West) - 421202 </p></div>
 				</div>
 				
 				<div class="col-md-6 map">
