--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn" style="display:flex;">
-                        <img style="height:400px;" src="uploads/about_04.jpg" alt="" class="img-fluid img-rounded">
-						<img style="height:400px;" src="uploads/videography.jpg" alt="" class="img-fluid img-rounded">
+                        <img style="height:400px;" src="uploads/about_us_image.jpg" alt="" class="img-fluid img-rounded">
+						<!--<img style="height:400px;" src="uploads/videography.jpg" alt="" class="img-fluid img-rounded">-->
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
