--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn" style="display:flex;">
-                        <img style="height:400px;" src="uploads/about_us_image.jpg" alt="" class="img-fluid img-rounded">
+                        <img style="height:400px;" src="uploads/about_us_image.jpeg" alt="" class="img-fluid img-rounded">
 						<!--<img style="height:400px;" src="uploads/videography.jpg" alt="" class="img-fluid img-rounded">-->
                     </div><!-- end media -->
                 </div><!-- end col -->
