--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
 				</div>
 				
 				<div class="col-md-6 map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3767.371590992841!2d73.0831053239552!3d19.2226305973554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7be1e49e1cd0b%3A0x4665e488ad316e80!2sMaratha%20Mandir%20Hall!5e0!3m2!1sen!2sin!4v1714586538838!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3767.3677220867003!2d73.07949937395517!3d19.22279934735008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7be1ed38a31ff%3A0xeb514193e5f2a922!2sGangeshwar%20nagar!5e0!3m2!1sen!2sin!4v1715886590032!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
 				</div>
 
