--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div id="preloader">
 		<div id="main-ld">
 			<div class="loader">
-				<span class="loader-inner">NP CREATION</span>
+				<span class="loader-inner"><img class="img-fluid loader_logo" src="images/loader_logo.png" alt="" /></span>
 			</div>
 		</div>
     </div><!-- end loader -->
@@ -93,7 +93,7 @@
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/reviews-bg.jpg'); opacity:2;">
 		<div class="heading">
 			<h1 style="margin-bottom:15px;margin-top:150px;">Welcome to NP Creation</h1>
-			<h2 style="color:#fff; font-weight:600; margin-bottom:30px;">"Your one-stop destination for<br> professional photography and videography services."</h2>
+			<h2 style="color:#fff; font-weight:600; margin-bottom:30px; line-height:40px !important;">"Your one-stop destination for<br> professional photography and videography services."</h2>
 			<h3 class="cd-headline clip is-full-width">
 				<span>NP CREATION provide service for </span>
 				<span class="cd-words-wrapper">
