--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 		</div>
 	</div>
 	
-    <div id="services" class="section lb">
+    <div id="services" class="section">
         <div class="container">
             <div class="section-title text-center">
                 <h3>Services</h3>
